--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -24,6 +24,9 @@
                 <ResourceDictionary Source="View/Schedule Editor/ScheduleEditorRoomDayView.xaml" />
                 <ResourceDictionary Source="View/Schedule Editor/ScheduleEditorEditDayView.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MainLib;component/View/SelectPersonDocumentTypeView.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MainLib;component/View/PersonVisitItemsListViews/PersonHierarchicalAssignmentsView.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MainLib;component/View/PersonVisitItemsListViews/PersonHierarchicalRecordsView.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MainLib;component/View/PersonVisitItemsListViews/PersonHierarchicalVisitsView.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <ControlTemplate x:Key="ValidationTemplate">
                 <Grid>
